login and charts
added js for login and charts

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,3 +7,5 @@ hsla(194, 86%, 46%, 1),
 hsla(200, 92%, 47%, 1),
 hsla(206, 98%, 48%, 1));
 $blueBoxShadow: 7px 7px rgb(157, 180, 245);
+$tabcolor: rgb(216, 218, 245);
+$backdropColor: rgba(17, 167, 226, 0.329);
