--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -4,7 +4,25 @@
     justify-content: center;
 }
 
+@mixin flexColumnMid{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 @mixin defaultBtn {
+    background: rgb(157, 180, 245);
+    width: 160px;
+    height: 50px;
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    text-decoration: none;
+    color: white;
+}
+
+@mixin bigBtn{
     background: rgb(157, 180, 245);
     width: 160px;
     height: 50px;
@@ -18,4 +36,9 @@
 @mixin lineSplit {
     height: 100%;
     min-width: 2px;
+}
+
+@mixin list {
+    text-decoration: none;
+    list-style-type: none;
 }
